Note: this file is in reversed chronological order (bottom to top).


December 31, 2003:
 - BRLTTY 3.4 released:
   Remove duplicate files from screen-3.9.11 patch. (TK)
   Add more build options to specify directories. (dm)
      --with-program-directory
      --with-library-directory
      --with-data-directory
      --with-manpage-directory
      --with-include-directory
   Swap HandyTech's "freeze screen" [B7] and "six-dot braille" [B6 B8] bindings. (dm)
   Support HandyTech Modular and Braille Star 80 keypad. (ml)
   Optional packages are also looked for in /opt/<package-name>. (dm)
   Configure shouldn't list external drivers when linking statically. (dm)
   Standardize the software speech driver identification notices. (dm)
   Support dynamic external, dynamic internal, and static linking for drivers with external dependencies. (dm)
   spk_open() should return a boolean indicating success or failure. (dm)
   Add spktest. (dm)
   Support the Theta text to speech engine. (dm)
   Add the 4(hundred) to the names of the Alva Delphi models. (dm)
   Get rid of --disable-tainted-components build option. (dm)
   Add the --with[out]-viavoice build options. (dm)
   Remove several unsigned/signed char conflicts. (dm)
   C90 doesn't permit C++-style // comments. (ml,dm)
   Support the Festival Lite text to speech engine. (ml)
   Allow the --with-...-driver= options to take "all" or a comma-delimited list. (dm)
   The Alva driver shouldn't set CRTSCTS as it prevents some models from displaying output. (dm)
   Split out HandyTech model identification in preparation for buffer resize support. (dm)
   Braille drivers providing packet I/O must now implement brl_reset(). (dm)
   Allow the .tbl extension for attributes translation tables to be optional. (dm)
   Allow the .ctb extension for contraction tables to be optional. (dm)
   Support default table extensions and prefixes when configuring. (dm)
   Disabling contracted braille doesn't fully disable it. (sd,dm)